De-duplicate structure (aka Feature) classes